[gd_scene load_steps=7 format=3 uid="uid://cqgrx6uy6i3dc"]

[ext_resource type="Script" path="res://End_Turn.gd" id="1_2d1v0"]
[ext_resource type="Texture2D" uid="uid://dprl71nmt4gbn" path="res://assets/operators/animation/end_turn1-sheet.png" id="2_5s3s1"]
[ext_resource type="AudioStream" uid="uid://cf46oljplnbkl" path="res://assets/sound/card-sounds-35956.mp3" id="3_ecidq"]

[sub_resource type="Animation" id="Animation_74ggl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_joy5c"]
resource_name = "flip"
length = 0.47
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5tgfu"]
_data = {
"RESET": SubResource("Animation_74ggl"),
"flip": SubResource("Animation_joy5c")
}

[node name="End_Turn" type="TextureButton"]
custom_minimum_size = Vector2(195, 280)
script = ExtResource("1_2d1v0")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(100, 141)
texture = ExtResource("2_5s3s1")
hframes = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5tgfu")
}

[node name="card_opening" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ecidq")
volume_db = -2.675
pitch_scale = 1.01
attenuation = 1.8025

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
